--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "nodemailer": "^6.8.0"
   },
