--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "db-push": "npx prisma db push && npx prisma generate",
     "db-pull": "npx prisma db pull && npx prisma generate"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@prisma/client": "^4.8.0",
     "argon2": "^0.30.2",
